-------------------------------------------------------------------

 Important Notice: 1) `mean`, `median`, `std`, and `var` functions
                       shadow core Octave's respective functions
                   2) incompatibility with the `nan` package
 New functions:
 ==============

 ** bvtcdf

 ** correlation_test (new functionality, replacing old cor_test)

 ** icdf (wrapper for all available *inv distribution functions)

 ** fishertest (fully Matlab compatible)

 ** procrustes (fully Matlab compatible)

 ** ztest2 (new functionality, replacing old prop_test_2)

 Improvements:
 =============

 ** cdf: updated wrapper for all available *cdf distribution functions

 ** dcov: handles missing values and multivariate samples

 ** geomean: fixed MATLAB compatibility

 ** harmmean: fixed MATLAB compatibility

 ** mean: fixed MATLAB compatibility

 ** median: fixed MATLAB compatibility

 ** mvtcdf: improved speed, fixed Matlab compatibility

 ** pdf: updated wrapper for all available *pdf distribution functions

 ** random: updated wrapper for all available *rnd distribution functions

 ** regression_ttest: new functionality

 ** std: fixed MATLAB compatibility

 ** var: fixed MATLAB compatibility

 Removed Functions:
 ==================

 ** cor_test (replaced by correlation_test)

 ** prop_test_2 (replaced by ztest2)




 Summary of important user-visible changes for statistics 1.5.5:
-------------------------------------------------------------------

 Important Notice: 1) `mad`, `mean`, `median`, `std`, `var` functions
                       shadow core Octave's respective functions
                   2) incompatibility with the `nan` package
 New functions:
 ==============

 ** isoutlier (fully Matlab compatible)

 ** mad (fully Matlab compatible)

 ** normfit (fully Matlab compatible)

 Improvements:
 =============

 ** runstest: fixed MATLAB compatibility

 Removed Functions:
 ==================

 ** run_test (replaced by runstest)
