@@ -495,6 +495,8 @@ Summary of important user-visible changes for statistics 1.5.1:
 
  ** normfit (fully Matlab compatible)
 
+ ** poissfit (fully Matlab compatible)
+
  Improvements:
  =============
 
